--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -95,6 +95,7 @@
                                     <a href="/loan" id="loan">创业贷款申请</a>
                                 </li>
                                 <li><a href="/immigrant" id="immigrant">移民落户咨询</a></li>
+                                <li><a href="/studytour" id="immigrant">游学之旅</a></li>
                                 <li>
                                     <a href="/information" id="information">行业资讯</a>
                                 </li>
@@ -144,28 +145,28 @@
                 <div class="col-md-4">
                     <h3>热门标签</h3>
                     <div style="margin-top: 1em">
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/certification">
                             学历学位认证
                         </a>
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/highschool">
                             初高中申请
                         </a>
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/mxztc">
                             本研直通
                         </a>
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/ksbk">
                             快速本科
                         </a>
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/courseguide">
                             学术辅导
                         </a>
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/zygh">
                             海归职业规划
                         </a>
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/loan">
                             创业贷款申请
                         </a>
-                        <a class="tagA" href="#">
+                        <a class="tagA" href="/immigrant">
                             移民落户咨询
                         </a>
                     </div>
