--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -83,56 +83,8 @@
 
     <div id="hxco-features"  style="background-attachment: fixed;background-image: url(../../static/images/web/tqpc_bg.png);background-repeat: repeat;background-size: contain;">
 		<div class="hxco-container">
-            <div class="row feature-title text-center">
-                <h3>我们提供更优质的服务</h3>
-            </div>
-            <div class="container text-center">
-                <div class="ourservice col-md-3">
-                    <i class="icon-home">
-                    </i>
-                    <p>学历学位认证</p>
-                </div>
-                <div class="ourservice col-md-3">
-                    <i class="icon-book">
-                    </i>
-                    <p>初高中申请</p>
-                </div>
-                <div class="ourservice col-md-3">
-                    <i class="icon-rocket">
-                    </i>
-                    <p>本研直通</p>
-                </div>
-                <div class="ourservice col-md-3">
-                    <i class="icon-flash">
-                    </i>
-                    <p>快速本科</p>
-                </div>
-                <div class="ourservice col-md-3">
-                    <i class="icon-book2">
-                    </i>
-                    <p>学术辅导</p>
-                </div>
-                <div class="ourservice col-md-3">
-                    <i class="icon-briefcase">
-                    </i>
-                    <p>海归职业规划</p>
-                </div>
-                <div class="ourservice col-md-3">
-                    <i class="icon-emoji-flirt">
-                    </i>
-                    <p>创业贷款申请</p>
-                </div>
-                <div class="ourservice col-md-3">
-                    <i class="icon-credit-card">
-                    </i>
-                    <p>移民落户咨询</p>
-                </div>
 
-            </div>
-        </div>
-    </div>
-    <div id="hxco-features">
-		<div class="hxco-container">
+
             <div class="row feature-title text-center" id="product_title">
                 <h3>为什么选择我们</h3>
             </div>
@@ -141,7 +93,7 @@
             </div>
 			<div class="row" style="margin-top: 2em;">
 				<div class="col-md-3 col-sm-3">
-					<div class="feature-center function-summary animate-box" data-animate-effect="fadeIn">
+					<div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn" >
 						<span class="icon">
 							<i class="icon-eye"></i>
 						</span>
@@ -153,7 +105,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3">
-					<div class="feature-center function-summary animate-box" data-animate-effect="fadeIn">
+					<div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-command"></i>
 						</span>
@@ -164,7 +116,7 @@
 					</div>
 				</div>
                 <div class="col-md-3 col-sm-3">
-					<div class="feature-center function-summary animate-box" data-animate-effect="fadeIn">
+					<div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-eye"></i>
 						</span>
@@ -173,26 +125,89 @@
                         <p>完备的售后体系与健全的应急备案作保障，决不让任何一个客户空手而归；</p>
                         <p>会员奖励机制让每一个来到恒心的人在被服务的同时，还能有利可图；</p>
                         <p>不定期开展留学生线上活动，动动手指就能让课余生活变得有声有色</p>
-						<p><a href="#" class="btn btn-primary">Learn More</a></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3">
-					<div class="feature-center function-summary animate-box" data-animate-effect="fadeIn">
+					<div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-power"></i>
 						</span>
 						<h3>有广度更有深度的资源</h3>
 						<p>核心项目均为一手优质资源，保证最低的价格，最快的速度，最贴心的服务与最完美的结果；</p>
                         <p>恒心有最稳健而资深的项目直接合作方：</p>
-                          <p>xx培训学校（名称？）</p>
-                          <p>丹佛宏思学院</p>
-                          <p>猎聘网北美总部</p>
-                          <p>EKKO Development Group</p>
-
-						<p><a href="#" class="btn btn-primary">Learn More</a></p>
+                        <p>xx培训学校（名称？）</p>
+                        <p>丹佛宏思学院</p>
+                        <p>猎聘网北美总部</p>
+                        <p>EKKO Development Group</p>
 					</div>
 				</div>
 			</div>
+        </div>
+    </div>
+    <div id="hxco-features">
+		<div class="hxco-container">
+            <div class="row feature-title text-center">
+                <h3>我们提供更优质的服务</h3>
+            </div>
+            <div class="container text-center" style="margin-top: 3em;">
+                <div class=" col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-home">
+                        </i>
+                        <p>学历学位认证</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-book">
+                        </i>
+                        <p>初高中申请</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-rocket">
+                        </i>
+                        <p>本研直通</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-flash">
+                        </i>
+                        <p>快速本科</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-book2">
+                        </i>
+                        <p>学术辅导</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-briefcase">
+                        </i>
+                        <p>海归职业规划</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-credit">
+                        </i>
+                        <p>创业贷款申请</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ourservice">
+                        <i class="icon-credit-card">
+                        </i>
+                        <p>移民落户咨询</p>
+                    </div>
+                </div>
+
+            </div>
 		</div>
 	</div>
 
