--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -13,11 +13,11 @@
         <div class="row" style="margin-top: 3em;">
 
             <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
-                <h3>关于名盛</h3>
-                <p>名盛教育咨询是美国联邦政府正式注册的国际教育咨询机构，</p>
-                <p>为在美的中国留学生提供包括初高中申请，大学研究生申请，名校保录取，开除紧急应对，转学，游学及冬/夏令营，</p>
-                <p>教育部认证，快速本科，政府实习，签证咨询，英文培训，求职培训等领域的服务。</p>
-                <p>以其地处美国本土之优势，深谙美国学校的招生偏好，并借助于与众多美国学校建立的良好关系而驰骋于中外教育桥梁之列。</p>
+                <h3>关于恒心</h3>
+                <p>恒心教育，留学群体的一站式管家</p>
+                <p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
+                <p>We are unique, 我们只是比别人多了一点恒心</p>
+                <p>You are fortunate, 你只是比别人多了一点恒心</p>
             </div>
         </div>
         <div class="row">
