--- a/core/templates/web/information_detail.html
+++ b/core/templates/web/information_detail.html
@@ -18,7 +18,7 @@
         </div>
         <p>时间：{{ act.dimDate | date:"Y-m-d" }}</p>
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-xs-8 detail1">
                 {{ act.content | safe }}
             </div>
             <div class="col-xs-4">
